<resources>
    <string name="app_name_application">WiFi Plug</string>
    <string name="register">Register</string>
    <string name="new_user_register">New user register</string>
    <string name="register_divide">Register</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="reset_divide">Reset</string>
    <string name="complete">Complete</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="login">Login</string>
    <string name="login_divide">Login</string>
    <string name="logout">Logout</string>
    <string name="device">Device</string>
    <string name="my_device">My Devices</string>
    <string name="find">Find</string>
    <string name="messages">Messages</string>
    <string name="personal">Personal</string>
    <string name="personal_center">Personal Center</string>
    <string name="username">Username</string>
    <string name="phonenum_hint">Pls input phonenumber</string>
    <string name="captcha_hint">Pls input captcha</string>
    <string name="verifycode_hint">Pls input verifycode</string>
    <string name="password_hint">Pls input password</string>
    <string name="password_tips">6-18 bit, At least two kinds of numbers, letters and symbols</string>
    <string name="old_password_tips">Input old password:</string>
    <string name="old_password_hint">Pls input old password</string>
    <string name="new_password_tips">input new password:</string>
    <string name="new_password_hint">Pls input new password</string>
    <string name="confirm_new_password_hint">Pls input confirm new password</string>
    <string name="phonenum_is_null">Empty phonenumber.</string>
    <string name="phonenum_is_illegal">Illegal phonenumber</string>
    <string name="password_is_null">Empty password</string>
    <string name="password_format_wrong">Password format wrong</string>
    <string name="password_length_wrong">Password length wrong</string>
    <string name="newpassword_format_wrong">Newpassword format wrong</string>
    <string name="newpassword_length_wrong">Newpassword length wrong</string>
    <string name="being_processed">Requesting</string>
    <string name="loading_default_hint">Loading</string>
    <string name="net_connect_fail">net work connect fail.</string>
    <string name="get_verification_code">Get VerifyCode</string>
    <string name="send_verifycode_success">send verify code success</string>
    <string name="getting_msg_code">getting verify code</string>
    <string name="getting_captcha">getting captcha</string>
    <string name="send_again">resend</string>
    <string name="input_verify_code">pls input verify code</string>
    <string name="input_captcha_code">pls input captcha</string>
    <string name="login_success">Login success</string>
    <string name="reset_success">Modify success</string>
    <string name="read_and_agree_protocal">Read and agree</string>
    <string name="protocal_name">《User protocal》</string>
    <string name="not_read_protocal">Pls read and agree 《User protocal》</string>
    <string name="remember_me">Remember me</string>
    <string name="phone_prefix">+86</string>
    <string name="please_login">login</string>
    <string name="login_tips">the number is phicomm account, please log in.</string>
    <string name="exit">exit</string>
    <string name="kick_tips">Your account has been logged on to another device. Please login again and change the password.</string>
    <string name="common_error">request error</string>
    <string name="connect_timeout">connect timeout</string>
    <string name="authorization_error">authorization error</string>
    <string name="verifycode_error">verifycode error</string>
    <string name="verifycode_expire">verifycode expire</string>
    <string name="old_password_error">old password error</string>
    <string name="account_password_not_match">accont and passwrod not match</string>
    <string name="token_invalid">token invalid</string>
    <string name="refresh_token_expire">refresh token expire</string>
    <string name="account_exist">account is exist</string>
    <string name="server_abnormal">server abnormal</string>
    <string name="image_format_fail">image format fail</string>
    <string name="image_is_empty">empty image</string>
    <string name="get_verifycode_failed">get verifycode fail</string>
    <string name="get_verifycode_too_fast">get verifycode too fast</string>
    <string name="get_verifycode_count_expire">verifycode request count expire</string>
    <string name="cliend_id_not_exist">clientid not exist</string>
    <string name="client_secret_error">client secret error</string>
    <string name="account_not_exist">account not exist</string>
    <string name="password_error">password error</string>
    <string name="parameters_error">parameters error</string>
    <string name="password_not_set">password not set</string>
    <string name="multi_account_error">multi account error</string>
    <string name="password_format_error">password format error</string>
    <string name="phonenum_format_error">phonenumber format error</string>
    <string name="captcha_error">captcha error</string>
    <string name="captcha_expire">captcha expire</string>
    <string name="verifycode_resend">Resend</string>
    <string name="not_verify_by_oldphonenumber">not verify by oldphonenumber</string>
    <string name="get_detail_userinfo_fail">get detail userinfo fail</string>
    <string name="no_authority">no authority</string>
    <string name="notset_user_icon">notset user icon</string>
    <string name="token_error">token error</string>
    <string name="account_not_active">account not active</string>
    <string name="verifycode_has_used">verifycode has used</string>
    <string name="account_is_exist">account is exist</string>
    <string name="mail_is_exist">mail is exist</string>
    <string name="account_is_logout">account is logout</string>
    <string name="need_refresh_token">need refresh_token</string>
    <string name="password_securiry_not_set">password securiry not set</string>
    <string name="password_security_error">password security error</string>
    <string name="mail_format_error">mail format error</string>
    <string name="username_format_error">username format error</string>
    <string name="phonenumber_not_register_account">phonenumber not register account</string>
    <string name="thridpart_account_not_bind">thridpart account not bind</string>
    <string name="sever_is_in_maintain">sever is in maintain</string>
    <string name="has_added_associated_device">has added associated device</string>
    <string name="device_cannot_communicate">device cannot communicate</string>
    <string name="account_bind_no_correct_device">account bind no correct device</string>
    <string name="device_bind_no_correct_account">device bind no correct account</string>
    <string name="account_bind_no_device">account bind no device</string>
    <string name="device_bind_no_account">device bind no account</string>
    <string name="has_no_share_account">has no share account</string>
    <string name="terminal_not_exist">terminal not exist</string>
    <string name="module_has_no_version">module has no version</string>
    <string name="app_version_not_support">APP version not support</string>
    <string name="device_has_no_newversion">device has no newversion</string>
    <string name="integral_format_error">integral format error</string>
    <string name="integral_balance_must_larger_0">integral balance must larger 0</string>
    <string name="integral_balance_not_enough">integral balance not enough</string>
    <string name="grow_value_must_larger_0">grow value must larger 0</string>
    <string name="scene_not_exist">scene not exist</string>
    <string name="uid_is_inconsistant">uid is inconsistant</string>
    <string name="scene_name_duplicated">scene name duplicated</string>
    <string name="scene_is_updating">scene is updating</string>
    <string name="scene_is_running">scene is running</string>
    <string name="wrong_data_format">wrong data format</string>
    <string name="scene_switch_too_fast">Scene switched too fast</string>
    <string name="scene">scene</string>
    <string name="refershlayout_is_loading">refreshing</string>
    <string name="refershlayout_loading_no_more">no more</string>
    <string name="refershlayout_loading_more">click to reload</string>
    <string name="refershlayout_loading_fail">load fail,click to reload</string>
    <string name="update_avatar">click change avatar</string>
    <string name="nickname">nickname</string>
    <string name="gender">gender</string>
    <string name="description">description</string>
    <string name="website">Website</string>
    <string name="hotline">HotLine</string>
    <string name="phicomm_website">www.phicomm.com</string>
    <string name="phicomm_hotline">4007-567-567</string>
    <string name="save">Save</string>
    <string name="person_info">personal info</string>
    <string name="modify_nickname">Modify nickname</string>
    <string name="input_nickname">pls input nickname</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="setting_birthday">set birthday</string>
    <string name="birthday">birthday</string>
    <string name="modify_password">modify password</string>
    <string name="copyright_info">©2017 PHICOMM</string>
    <string name="no_camera">no camera</string>
    <string name="no_album">no album</string>
    <string name="album">album</string>
    <string name="take_photo">take photo</string>
    <string name="please_grant_app_permission">Pls grant_ app permissions in settings</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="common_issues">issues help</string>
    <string name="version_check">version check</string>
    <string name="about">about</string>
    <string name="set_success">set success</string>
    <string name="avatar_switch_success">avatar switch success</string>
    <string name="avatar_switch_failure">avatar switch fail</string>
    <string name="nickname_empty_tip">Empty nickname</string>
    <string name="nickname_length_tip">Nickname control in 1-11 characters</string>
    <string name="nickname_text_tip">Nickname only support Chinese, English, numbers, underline</string>
    <string name="nickname_input_tip">please input nickname, control in 1-11 characters</string>
    <string name="no_network_reload">reload</string>
    <string name="what_is_scene">What is scene?</string>
    <string name="scene_introdution">If you create a going home scene, the smart device operation will be executed according to your scene.</string>
    <string name="scene_example_start_condition">Go home scene will start at 17:00</string>
    <string name="scene_example_action1">Close curtain</string>
    <string name="scene_example_action1_delay_time">After 1 hour</string>
    <string name="scene_example_action2">Turn on TV</string>
    <string name="scene_example_action2_delay_time">After 1 hour</string>
    <string name="scene_example_action3">Turn on light</string>
    <string name="scene_example_action3_delay_time">After 1 hour</string>
    <string name="time_delay_prompt">Delay time</string>
    <string name="operation_set">operation set</string>
    <string name="network_unavailable">The network connection is not available</string>
    <string name="empty_layout_tip1">Pro, you have not added device yet</string>
    <string name="empty_layout_tip2">Click on the upper right corner of the "+" choose to add the equipment you have purchased \n open a new smart life now!</string>
    <string name="network_request_failed">The network request failed</string>
    <string name="check_network">Please check your network</string>
</resources>