<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F6"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Old Password -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/default_item_label_color"
                android:text="@string/old_password_tips" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    style="@style/modify_passwrod_edittext_style"
                    android:hint="@string/old_password_hint" />

                <ImageView
                    android:id="@+id/password_display_imageview"
                    style="@style/password_showhide_imageview_style_black"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <!-- new  Password -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/password"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="14sp"
                android:textColor="@color/default_item_label_color"
                android:text="@string/new_password_tips" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/new_password_1"
                    style="@style/modify_passwrod_edittext_style"
                    android:hint="@string/password_tips" />

                <ImageView
                    android:id="@+id/new_password_display_imageview_1"
                    style="@style/password_showhide_imageview_style_black"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/new_password_2"
                    style="@style/modify_passwrod_edittext_style"
                    android:hint="@string/confirm_new_password_hint" />

                <ImageView
                    android:id="@+id/new_password_display_imageview_2"
                    style="@style/password_showhide_imageview_style_black"
                    android:layout_marginRight="10dp" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/logout_btn_selector"
            android:textColor="@drawable/button_colour_text_selector"
            android:textSize="16dp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:text="@string/complete" />
    </RelativeLayout>
</LinearLayout>