<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/network_warning"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/color_f5ad47"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:src="@drawable/network_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:text="@string/network_unavailable" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.phicomm.smartplug.view.refreshlayout.CustomPtrFrameLayoutRefreshHeader
            android:id="@+id/frame_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ptr_duration_to_close="200"
            app:ptr_duration_to_close_header="200"
            app:ptr_keep_header_when_refresh="true"
            app:ptr_pull_to_fresh="false"
            app:ptr_ratio_of_header_height_to_refresh="1.2"
            app:ptr_resistance="2.3">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/device_list_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.phicomm.smartplug.view.refreshlayout.CustomPtrFrameLayoutRefreshHeader>

        <LinearLayout
            android:id="@+id/empty_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_layout_tip1"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/empty_layout_tip2"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/network_error_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/network_error_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="center"
                android:text="@string/network_request_failed"
                android:textColor="@color/default_item_value_color"
                android:textSize="17dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/check_network"
                android:textColor="@color/color_909090"
                android:textSize="15dp" />

            <Button
                android:id="@+id/reload_bt"
                android:layout_width="102dp"
                android:layout_height="33dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/reload_bt_bg"
                android:text="@string/no_network_reload"
                android:textColor="@color/default_item_value_color"
                android:textSize="17dp" />

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>